Added indicators for unvisited URLs
