# web/docs/swagger.json
@@ -148,6 +148,12 @@
                         "description": "Include failed screenshots in the results.",
                         "name": "failed",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Hide duplicate final URLs.",
+                        "name": "hide_duplicates",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -244,6 +250,40 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/api.technologyListResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/results/visit": {
+            "post": {
+                "description": "Sets result as visited by id.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Results"
+                ],
+                "summary": "Set result as visited",
+                "parameters": [
+                    {
+                        "description": "The result ID to set as visited",
+                        "name": "query",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.visitResultRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -471,6 +511,9 @@
                 },
                 "url": {
                     "type": "string"
+                },
+                "visited": {
+                    "type": "boolean"
                 }
             }
         },
@@ -735,6 +778,14 @@
                 }
             }
         },
+        "api.visitResultRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.ConsoleLog": {
             "type": "object",
             "properties": {
@@ -959,6 +1010,10 @@
                 },
                 "url": {
                     "type": "string"
+                },
+                "visited": {
+                    "description": "Visited flag set if URL is visited via the report server",
+                    "type": "boolean"
                 }
             }
         },
